Made overflow visible -- shadow no longer being clipped, made style specific to knob

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
 	width: 100%;
 }
 
-circle {
+.knob {
+	overflow: visible;
+}
+
+.knob circle {
 	-webkit-filter: drop-shadow(0px 0px 1px #000);
 }
